--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
         </h1>
         <div class="section">
             <div class="box onest">
-                <img src="img/illustrator-1.png" alt="">
+                <img src="img/i1.png" alt="">
                 <h2>Mission</h2>
                 <p>Complete my honours Mathmatics course and get a good result and develop my skill to make me perfect
                     for any position in job sector.
                 </p>
             </div>
             <div class="box twond">
-                <img src="img/illustrator-2.png" alt="">
+                <img src="img/i2.png" alt="">
                 <h2>Vission</h2>
                 <p>Working hard and be more patient in learning. Time cannot be wasted, because time is a great blessing
                     of Allah</p>
             </div>
             <div class="box third">
-                <img src="img/illustrator-3.png" alt="">
+                <img src="img/i3.png" alt="">
                 <h2>Goals</h2>
                 <p>My biggest goal in life is to become a BCS cader. But it is a long time process. So, after compling
                     my graduation, I will go to Dhaka and will start prepartion for BCS Exam. And I will do some
